[package]
name = "termimgview"
authors = ["William Rågstad"]
description = "A simple terminal image viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "unstable-styles"] }
crossterm = "0.27.0"
image = "0.24.7"
lazy_static = "1.4.0"
